tests/invalid/generic_native_predicate_reject_non_integer.wio
use std::traits as traits;

realm ffi {
    @Native
    @CppHeader("native_generic_math.h")
    @CppName(native_generic::DoubleValue)
    @Instantiate(traits::IsInteger<T>)
    fn DoubleValue<T>(value: T) -> T;
}

fn Entry() -> i32 {
    let value = ffi::DoubleValue(1.25f32);
    return value fit i32;
}
